--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     sdk: flutter
   get: ^4.6.5
   image_picker: ^1.0.2
+  video_player: ^2.7.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
