--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_video_player: ^2.0.4
   cloud_firestore: ^4.8.4
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.7.2
@@ -35,9 +36,11 @@ dependencies:
   firebase_storage: ^11.2.5
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.3.1
   get: ^4.6.5
   image_picker: ^1.0.2
-  video_player: ^2.7.0
+  path_provider: ^2.1.0
+  video_compress: ^3.1.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
