--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_cache_manager: ^3.3.1
+  fluttertoast: ^8.2.2
   get: ^4.6.5
   image_picker: ^1.0.2
   path_provider: ^2.1.0
